--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write .",
     "compile": "graphql-codegen",
     "watch": "graphql-codegen -w"
   },
   "dependencies": {
     "@apollo/client": "^3.11.10",
     "@apollo/experimental-nextjs-app-support": "^0.11.5",
-    "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.1",
     "clsx": "^2.1.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
     "uuid": "^11.0.3",
     "zod": "^3.23.8"
