--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@apollo/client": "^3.11.10",
     "@apollo/experimental-nextjs-app-support": "^0.11.5",
+    "@fontsource/opendyslexic": "^5.1.0",
     "@hookform/resolvers": "^3.9.1",
     "clsx": "^2.1.1",
     "next": "15.0.3",
