--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@apollo/experimental-nextjs-app-support": "^0.11.5",
     "@fontsource/opendyslexic": "^5.1.0",
     "@hookform/resolvers": "^3.9.1",
+    "@react-hookz/deep-equal": "^3.0.3",
     "clsx": "^2.1.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
