--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/opendyslexic": "^5.1.0",
     "@hookform/resolvers": "^3.10.0",
     "@react-hookz/deep-equal": "^3.0.3",
+    "@supabase/ssr": "^0.5.2",
     "clsx": "^2.1.1",
     "next": "^15.1.4",
     "react": "^19.0.0",
