feat: item tags

--- a/package.json
+++ b/package.json
@@ -5,49 +5,44 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "pnpm compile && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write .",
-    "compile": "graphql-codegen",
-    "watch": "graphql-codegen -w"
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "@apollo/client": "^3.12.8",
-    "@apollo/experimental-nextjs-app-support": "^0.11.8",
     "@fontsource/opendyslexic": "^5.1.0",
     "@hookform/resolvers": "^3.10.0",
     "@react-hookz/deep-equal": "^3.0.3",
     "@supabase/ssr": "^0.5.2",
     "clsx": "^2.1.1",
-    "next": "^15.1.6",
+    "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
-    "tailwind-merge": "^2.6.0",
+    "server-only": "^0.0.1",
+    "tailwind-merge": "^3.0.1",
     "uuid": "^11.0.5",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.4",
-    "@graphql-codegen/client-preset": "^4.6.1",
-    "@graphql-typed-document-node/core": "^3.2.0",
-    "@tailwindcss/postcss": "^4.0.3",
-    "@types/node": "^22.13.0",
+    "@tailwindcss/postcss": "^4.0.6",
+    "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "babel-plugin-react-compiler": "19.0.0-beta-27714ef-20250124",
-    "daisyui": "5.0.0-beta.6",
+    "babel-plugin-react-compiler": "19.0.0-beta-30d8a17-20250209",
+    "daisyui": "5.0.0-beta.8",
     "dotenv": "^16.4.7",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.0.4",
     "eslint-config-prettier": "^9.1.0",
     "graphql": "^16.10.0",
-    "postcss": "^8.5.1",
-    "prettier": "^3.4.2",
+    "postcss": "^8.5.2",
+    "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.3",
+    "supabase": "^2.12.1",
+    "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3"
   }
 }
